syntax = "proto3";
package transaction;
option go_package = "./proto";

service TransactionService {
  rpc Deposit (TransactionRequest) returns (TransactionResponse);
}

message TransactionRequest {
  string wallet_id = 1;
  double amount = 2;
  string idempotency_key = 3;
}

message TransactionResponse {
  string transaction_id = 1;
}
